test/invalid-semantics/60294_record_wrong_type/record_wrong_type.mag
-- Author: 60294, Pedro Rosa
const myRec: {id: Int, user: String} = {user="admin", id="0"}